--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ html {
 }
 
 .background {
-  background: url("https://i.imgur.com/kvqtP5H.png") no-repeat center
-    center/cover;
+  background: url("images/background.png") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   justify-content: center;
